--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<html>
 	<head>
-		<title>Errol Markland :: Homepage</title>
+		<meta content="text/html; charset=UTF-8" />
+		<title>Mr. Markland's Zone</title>
 		<link href="style/style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
