Added lesscss to the project. It's awesome.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<body>
 		<div id="page">
 			<div id="header">header</div>
-			<div id="content">
-				<div class="sidebar">Sidebar</div>
-				<div class="body">Sidebar</div>
-				<div class="sidebar">Sidebar</div>
-				<div class="clear"> </div>
-			</div>
+			<div id="content">content</div>
+			
+			<div class="sidebar">Sidebar</div>
+			<div class="body">Sidebar</div>
+			<div class="sidebar">Sidebar</div>
+			<div class="clear"> </div>
+			
 			<div id="footer">footer</div>
+			
 		</div>
 	</body>	
 </html>
