Finally laid out a really basic structure. Still need lots of work though!

--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 	<head>
 		<meta content="text/html; charset=UTF-8" />
 		<title>Mr. Markland's Zone</title>
+		<link href='http://fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
 		<link href="style/style.css" type="text/css" rel="stylesheet" />
+		
 	</head>
 	<body>
 		<div id="page">
 			<div id="header">header</div>
+			<div class="separator"> </div>
 			<div id="content">content</div>
-			
-			<div class="sidebar">Sidebar</div>
-			<div class="body">Sidebar</div>
-			<div class="sidebar">Sidebar</div>
-			<div class="clear"> </div>
-			
+			<div id="sidebar">Sidebar</div>
+			<div class="separator"> </div>
 			<div id="footer">footer</div>
-			
 		</div>
 	</body>	
 </html>
