Enhanced the layout of the website a bit more.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
 		
 	</head>
 	<body>
+		<div id="body">
 		<div id="page">
-			<div id="header">header</div>
+			<div id="header">The Zone</div>
 			<div class="separator"> </div>
-			<div id="content">content</div>
-			<div id="sidebar">Sidebar</div>
+			<div id="navigation">navigation</div>
+			<div class="separator"> </div>
+			<div id="content">
+				<div class="content-item">
+					<div class="content-item-title">Sample title</div>
+					<div class="content-item-content">Sample content</div>
+				</div>
+				<div class="content-item">
+					<div class="content-item-title">Sample title 2</div>
+					<div class="content-item-content">Sample content 2</div>
+				</div>
+			</div>
+			<div id="sidebar">Want to follow me!! <i>DON'T</i></div>
 			<div class="separator"> </div>
 			<div id="footer">footer</div>
+		</div>
 		</div>
 	</body>	
 </html>
