More styling and changed title name.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
-		<meta content="text/html; charset=UTF-8" />
-		<title>Mr. Markland's Zone</title>
-		<link href='http://fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
+		<meta http-equiv="Content-Type" ="text/html; charset=UTF-8" />
+		<title>Errol Markland. The Curious Developer.</title>
 		<link href="style/style.css" type="text/css" rel="stylesheet" />
-		
 	</head>
 	<body>
 		<div id="body">
 		<div id="page">
-			<div id="header">The Zone</div>
+			<div id="header">Curious Developer</div>
 			<div class="separator"> </div>
 			<div id="navigation">navigation</div>
 			<div class="separator"> </div>
