Added fonts to the website

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<div id="sidebar">Want to follow me!! <i>DON'T</i></div>
 			<div class="separator"> </div>
 			<div id="footer">footer</div>
+			<div id="copyright">&copy; Errol Markland, 2012.</div>
 		</div>
 		</div>
 	</body>	
