Added more to the design aspect. Even threw in a copyright.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" ="text/html; charset=UTF-8" />
-		<title>Errol Markland. The Curious Developer.</title>
+		<title>Errol Markland. Curious Developer.</title>
 		<link href="style/style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
@@ -22,11 +22,21 @@
 					<div class="content-item-content">Sample content 2</div>
 				</div>
 			</div>
-			<div id="sidebar">Want to follow me!! <i>DON'T</i></div>
+			<div id="sidebar">
+				<div class="content-item">
+					<div class="content-item-title">Sidebar title 1</div>
+					<div class="content-item-content">Side bar item 1</div>
+				</div>
+				
+				<div class="content-item">
+					<div class="content-item-title">Sidebar title 2</div>
+					<div class="content-item-content">Sidebar content 2</div>
+				</div>
+			</div>
 			<div class="separator"> </div>
 			<div id="footer">footer</div>
-			<div id="copyright">&copy; Errol Markland, 2012.</div>
 		</div>
+		<div id="copyright">&copy; Errol Markland, 2012.</div>
 		</div>
 	</body>	
 </html>
