Adding robots.txt

--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" ="text/html; charset=UTF-8" />
-		<title>Errol Markland. Curious Developer.</title>
+		<title>Errol G. Markland Jr.</title>
+		<meta name="description" content="The central hub for all things about Errol G. Markland Jr." />
+		<meta name="keywords" content="Errol, Markland, Jr, Software, Developer, Computer, Engineer, Back End, Game Programmer, CCNY, NSBE, ACM, New York" />
 		<link href="style/style.css" type="text/css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="body">
 		<div id="page">
-			<div id="header">Curious Developer</div>
+			<div id="header">
+				Errol G. Markland Jr.
+				<div style="font-size: 36px;">An awesome guy with a burning passion for tech and software development.</div>
+			</div>
 			<div class="separator"> </div>
-			<div id="navigation">navigation</div>
+			<div id="navigation">
+				<ul>
+					<li class='nav-item' id="active-nav-item" title="Currently on this page"><a href="#">Home</a></li>
+					<li class='nav-item'><a href="#" title="Check out the resume!">Resume</a></li>
+					<li class='nav-item'><a href="#" title="Check out some of my projects!">Projects</a></li>
+				</ul>
+			</div>
 			<div class="separator"> </div>
 			<div id="content">
 				<div class="content-item">
@@ -34,7 +45,12 @@
 				</div>
 			</div>
 			<div class="separator"> </div>
-			<div id="footer">footer</div>
+			<div id="footer">
+				<a href="#">Home</a> | 
+				<a href="#">Resume</a> | 
+				<a href="#">Projects</a> |
+				<a href="#">Site Map</a>
+			</div>
 		</div>
 		<div id="copyright">&copy; Errol Markland, 2012.</div>
 		</div>
