Fix contact script.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div>
                 <div class="row">
                     <div class="12u">
-                        <form method="post" action="#">
+                        <form id='contact-form'>
                             <div>
                                 <div class="row">
                                     <div class="6u 12u(mobile)">
@@ -218,10 +218,10 @@
                                     <div class="12u">
                                         <ul class="actions">
                                             <li>
-                                                <input type="submit" value="Send Message" />
+                                                <button type="submit" id='submit-button'>Send Message</button>
                                             </li>
                                             <li>
-                                                <input type="reset" value="Clear Form" class="alt" />
+                                                <button type="reset" class="alt">Clear Form</button>
                                             </li>
                                         </ul>
                                     </div>
