Check a bit of info.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="8u 12u(mobile)">
                     <header>
                         <h1>Hi. I&#39;m 
-                        <strong>Errol Markland Jr.</strong>.</h1>
+                        <strong>Errol G. Markland Jr.</strong>.</h1>
                     </header>
                     <p>A developer who likes to explore the various venues of technology.</p>
                     <a href="#contact" class="button big scrolly">Get in touch</a>
@@ -97,8 +97,7 @@
     <div class="wrapper style3">
         <article id="projects">
             <header>
-                <h2>Stuff I made will be placed here.</h2>
-                <p>UNDER CONSTRUCTION</p>
+                <h2>The re-construction is under way</h2>
             </header>
             
             <!--
