--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,3 @@
-<?php
-    session_start();
-
-    $token = md5(uniqid(rand(), TRUE));
-    $tokenTime = time();
-    $expirationTimeInSec = $tokenTime + 10; // 30 secs from now
-    $cookieVal = md5($token ^ $tokenTime);
-
-    $serverName = $_SERVER['SERVER_NAME'];
-    $secureCookie = true;
-    $httpOnlyCookie = true;
-    if (in_array($serverName, array("localhost", "127.0.0.1", "::1"))) {
-	     $secureCookie = false;
-       $httpOnlyCookie = false;
-    }
-
-    if (setcookie('sc', $cookieVal, $expirationTimeInSec, "/", $_SERVER['SERVER_NAME'], $secureCookie, $httpOnlyCookie)) {
-        $_SESSION['token'] = $token;
-        $_SESSION['token_time'] = $tokenTime;
-    }
-?>
-
 <!DOCTYPE HTML>
 <html>
     <head>
@@ -166,6 +144,7 @@
         <script src="js/main.js"></script>
         <!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
 
+        <script src="https://article-tracker.s3-us-west-2.amazonaws.com/latest.json"><script>
         <script src="js/article-template.js"></script>
         <script src="js/latest-entry.js"></script>
 
