--- a/src/index.html
+++ b/src/index.html
@@ -144,9 +144,9 @@
         <script src="js/main.js"></script>
         <!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
 
-        <script src="https://article-tracker.s3-us-west-2.amazonaws.com/latest.json"><script>
+        <script src="https://article-tracker.s3-us-west-2.amazonaws.com/latest.json"></script>
         <script src="js/article-template.js"></script>
-        <script src="js/latest-entry.js"></script>
+        <script src="js/load-from-latest.js"></script>
 
         <!-- Google Analytics -->
         <script>
